<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:background="#009688"
            android:fontFamily="sans-serif-black"
            android:text="@string/counter"
            android:textAlignment="center"

            android:textColor="@color/white"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:background="#009688"
            android:fontFamily="sans-serif-black"
            android:text="@string/_0"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:onClick="counter"
            android:text="@string/start"
            android:textSize="36sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:onClick="activity2"
            android:text="@string/activity_2"
            android:textSize="36sp"
           />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:text="@string/activity_3"
            android:textSize="36sp"
            android:onClick="activity3"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>